# GF_25_v3

./: .env  .env.example  .gitignore  _code_spider.py  _tree_root_full_detail.py  pyproject.toml
.taskmaster/: state.json
.windsurf/: mcp.json
app/: __init__.py  config.py  config_hot_reload.py  config_loader.py  config_schema.py  logging_config.py  main.py  metrics.py  model_config.py  models.py  pipeline_integration.py
configs/: activities.yaml  ages.yaml  body_shapes.yaml  captions.yaml  category.yaml  colors.yaml  composition.yaml  emotions.yaml  ethnicity.yaml  events.yaml  gender.yaml  lighting.yaml  locations.yaml  objects.yaml  occlusions.yaml  outfits.yaml  relationships.yaml  scene_description.yaml  themes.yaml  time_of_day.yaml  weather.yaml
configs_corrective/: activities_corrective.yaml  ages_corrective.yaml  body_shapes_corrective.yaml  captions_corrective.yaml  category_corrective.yaml  colors_corrective.yaml  composition_corrective.yaml  emotions_corrective.yaml  ethnicity_corrective.yaml  events_corrective.yaml  gender_corrective.yaml  lighting_corrective.yaml  locations_corrective.yaml  objects_corrective.yaml  occlusions_corrective.yaml  outfits_corrective.yaml  relationships_corrective.yaml  scene_description_corrective.yaml  themes_corrective.yaml  time_of_day_corrective.yaml  weather_corrective.yaml
scripts/: gen_configs.py  generate_corrective_configs.py  migrate_configs.py  secret-replacements.txt
tests/: conftest.py  test_agents_validation.py  test_analysis_engine.py  test_config_api.py  test_config_hot_reload.py  test_config_loader.py  (+29 more)
(+63 files in other folders)
